labs/lab1/testsuite/good/typedef-simple.cc
typedef int main;

int main() {
  typedef int main;
}
