labs/lab1/testsuite/bad/bad044.cc
int foo() {
	printf("foo" "bar" 42);
}
